--- a/apps/pattern-lab--workshop/src/_patterns/02-components/band/20-band-flag-variation.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/band/20-band-flag-variation.twig
@@ -1,17 +1,56 @@
-{% embed "@bolt-components-band/band.twig" with {
-  size: "medium",
-  theme: "xlight"
-} %}
-  {% block band_content %}
-    {% include "@bolt-components-headline/eyebrow.twig" with {
-      text: "Who is Pega?"
-    } %}
-    {% include "@bolt-components-headline/text.twig" with {
-      text: "Pega is #1 in software for customer engagement and operational excellence."
-    } %}
-    {% include "@bolt-components-button/button.twig" with {
+<p>Band: Flag with One Button</p>
+{% include '@bolt-components-band/band--flag.twig' with {
+  eyebrow: {
+    text: "Who is Pega?"
+  },
+  headline: {
+    text: "Pega is #1 in software for customer engagement and operational excellence."
+  },
+  buttons: [
+    {
       text: "Example button #1",
       style: "primary"
-    } %}
-  {% endblock band_content %}
-{% endembed %}
+    }
+  ]
+} %}
+
+<p>Band: Flag with Two Buttons</p>
+{% include '@bolt-components-band/band--flag.twig' with {
+  eyebrow: {
+    text: "Who is Pega?"
+  },
+  headline: {
+    text: "Pega is #1 in software for customer engagement and operational excellence."
+  },
+  buttons: [
+    {
+      text: "Learn More",
+      style: "primary"
+    },
+    {
+      text: "About Pega",
+      style: "secondary"
+    }
+  ]
+} %}
+
+<p>Band: Flag with Two Buttons</p>
+{% include '@bolt-components-band/band--flag.twig' with {
+  eyebrow: {
+    text: "Who is Pega?"
+  },
+  headline: {
+    text: "Pega is #1 in software for customer engagement and operational excellence."
+  },
+  buttons: [
+    {
+      text: "Example button #1",
+      style: "primary"
+    },
+    {
+      text: "Example button #2",
+      style: "secondary"
+    }
+  ]
+} %}
+
