--- a/apps/pattern-lab--workshop/src/_patterns/02-components/band/35-band-video-background-variation.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/band/35-band-video-background-variation.twig
@@ -2,25 +2,26 @@
   theme: "dark",
   size: "medium",
   background: {
-    "opacity": "heavy",
-    "fill": "color",
-    "focalPoint": {
-      "vertical": "center",
-      "horizontal": "center"
+    opacity: "heavy",
+    fill: "color",
+    focalPoint: {
+      vertical: "center",
+      horizontal: "center"
     },
-    "contentItems": [
+    contentItems: [
       {
-        "pattern": "image",
-        "src": "/images/sample/background-banner--left-focal-point.jpg"
+        pattern: "image",
+        src: "/images/content/backgrounds/background-short-1.jpg",
+        lazyload: false
       },
       {
-        "pattern": "video",
-        "isBackgroundVideo": true,
-        "videoId": "5609376179001",
-        "accountId": "1900410236",
-        "playerId": "r1CAdLzTW",
-        "attributes": {
-          "class": [
+        pattern: "video",
+        isBackgroundVideo: true,
+        videoId: "5609376179001",
+        accountId: "1900410236",
+        playerId: "r1CAdLzTW",
+        attributes: {
+          class: [
             "js-video-bg-test-1"
           ]
         }
