--- a/apps/pattern-lab--workshop/src/_patterns/02-components/band/00-band-docs.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/band/00-band-docs.twig
@@ -1,6 +1,80 @@
 {#{% set schema = get_data('@bolt-components-band/band.schema.yml') %}#}
 {% set readme = source('@bolt-components-band/README.md') %}
 {% set code %} {% verbatim %}
+{% include "@bolt-components-band/band.twig" with {
+  content: "Example Band Content",
+} only %}
+
+{% include "@bolt-components-band/band--collection.twig" with {
+  contentItems: [
+    {
+      pattern: "card",
+      ...
+    },
+    {
+      pattern: "card-w-teaser",
+      ...
+    },
+    {
+      pattern: "teaser",
+      ...
+    }
+  ]
+} only %}
+
+{% include "@bolt-components-band/band--card-collection.twig" with {
+  contentItems: [
+    {
+      pattern: "card",
+      ...
+    },
+    {
+      pattern: "card",
+      ...
+    },
+    {
+      pattern: "card",
+      ...
+    }
+  ]
+} only %}
+
+{% include "@bolt-components-band/band--feature.twig" with {
+  primaryTeaser: {
+    headlines: [
+      ...
+    ]
+  }
+} only %}
+
+{% include "@bolt-components-band/band--flag.twig" with {
+  eyebrow: {
+    text: "Who is Pega?"
+  },
+  headline: {
+    text: "Pega is #1 in software for customer engagement and operational excellence."
+  },
+  buttons: [
+    ...
+  ]
+} only %}
+
+{% include "@bolt-components-band/band--teaser.twig" with {
+ contentItems: [
+    {
+      pattern: "teaser",
+      ...
+    },
+    {
+      pattern: "teaser",
+      ...
+    },
+    {
+      pattern: "teaser",
+      ...
+    }
+  ]
+} only %}
 
 {% endverbatim %}
 {% endset %}
