--- a/apps/pattern-lab--workshop/src/_patterns/02-components/image/10-image-size-variations.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/image/10-image-size-variations.twig
@@ -1,6 +1,6 @@
 {% set classes = create_attribute(imageAttributes | default({})).addClass([
     "c-bolt-image__img",
-    "u-bolt-width-1-1",
+    "u-bolt-width-1/1",
   ])
 %}
 
