--- a/apps/pattern-lab/src/_includes/utils/schema-docs.twig
+++ b/apps/pattern-lab/src/_includes/utils/schema-docs.twig
@@ -73,7 +73,7 @@
       <li>
         <code>{{ key }}</code>
         {{ macros.titleAndDescription(prop.title, prop.description, prop.minimum, prop.maximum) }}
-        {% if isRef %}<br />Type: {{ prop.type }}{% endif %}
+        {% if isRef %}<br />Type: {{ prop.type is iterable ? prop.type|join(' OR ') : prop.type }} {% endif %}
         {{ macros.schemaProps(prop) }}
       </li>
     {% endfor %}
@@ -126,15 +126,16 @@
             <td class="c-bolt-docs-table__col">{{ macros.titleAndDescription(prop.title, prop.description, prop.minimum, prop.maximum) }}</td>
 
             <td class="c-bolt-docs-table__col">
-              <code>
-                {% if prop.default == false %}
-                  False
-                {% elseif prop.default == 'true' %}
-                  True
+
+                {% if prop.default is sameas(false) %}
+                  <code>False</code>
+                {% elseif prop.default is sameas(true) %}
+                  <code>True</code>
+                {% elseif prop.default is empty %}
+                  (None)
                 {% else %}
-                  {{ prop.default }}
+                  <code>{{ prop.default }}</code>
                 {% endif %}
-              </code>
             </td>
           </tr>
         {% endfor %}
