fix: fix schema issues in pattern lab pages (BDS-291)

--- a/apps/pattern-lab/src/_patterns/04-pages/80-events/event-landing.twig
+++ b/apps/pattern-lab/src/_patterns/04-pages/80-events/event-landing.twig
@@ -293,7 +293,7 @@
             {% for i in 1..6 %}
               {% cell "u-bolt-width-1/1" %}
                 {% embed "@bolt/card.twig" with {
-                  theme: "x-light"
+                  theme: "xlight"
                 } only %}
 
                   {% block card_media %}
