--- a/apps/pattern-lab/src/_patterns/04-pages/60-d8-homepage/-05-d8-homepage.twig
+++ b/apps/pattern-lab/src/_patterns/04-pages/60-d8-homepage/-05-d8-homepage.twig
@@ -136,7 +136,6 @@
       {% cell "u-bolt-width-1/1@only-small" %}
         {% include "@bolt/button.twig" with {
           text: "Learn More",
-          style: "flat",
           width: "full",
           size: "medium"
         } only %}
@@ -290,7 +289,7 @@
               {% include "@bolt/button.twig" with {
                 text: "Get Real",
                 style: "primary",
-                size: small
+                size: "small"
               } only %}
 
             {% endcell %}
