--- a/apps/pattern-lab/src/_patterns/04-pages/40-full-page-theming/_full-page-theming.twig
+++ b/apps/pattern-lab/src/_patterns/04-pages/40-full-page-theming/_full-page-theming.twig
@@ -264,7 +264,7 @@
       ]
     }
   ]
-} %}
+} only %}
   {% block band_content %}
     {% include "@bolt/headline.twig" with {
       text: "What's Trending",
