Refactor: update flag band to extend band (BDS-291)

--- a/packages/components/bolt-band/src/band--flag.twig
+++ b/packages/components/bolt-band/src/band--flag.twig
@@ -1,36 +1,32 @@
-{% embed "@bolt/band.twig" with {
-  size: size | default("large"),
-  theme: theme | default("dark")
-} %}
-  {% block band_content %}
+{% extends "@bolt/band.twig" %}
 
-    {% grid "o-bolt-grid--flex o-bolt-grid--middle o-bolt-grid--matrix" %}
-      {% cell "u-bolt-width-1/1 u-bolt-width-1/2@small u-bolt-flex-grow" %}
-        {% grid %}
-          {% cell "u-bolt-width-1/1 u-bolt-width-3/4@small" %}
-            {% if eyebrow %}
-              {% include "@bolt/eyebrow.twig" with eyebrow only %}
-            {% endif %}
-          
-            {% if headline %}
-              {% include "@bolt/headline.twig" with headline only %}
-            {% endif %}
+{% set size = size | default("large") %}
 
-            {{ content }}
-          {% endcell %}
-        {% endgrid %}
-      {% endcell %}
+{% block band_content %}
 
-      {# TODO: only allow max of 2 buttons #}
-      {% if buttons %}
-        {% cell "u-bolt-width-1/1@only-small" %}
-          {{ include('@bolt/button-group.twig', { buttons: buttons }, with_context = false) }}
+  {% grid "o-bolt-grid--flex o-bolt-grid--middle o-bolt-grid--matrix" %}
+    {% cell "u-bolt-width-1/1 u-bolt-width-1/2@small u-bolt-flex-grow" %}
+      {% grid %}
+        {% cell "u-bolt-width-1/1 u-bolt-width-3/4@small" %}
+          {% if eyebrow %}
+            {% include "@bolt/eyebrow.twig" with eyebrow only %}
+          {% endif %}
+
+          {% if headline %}
+            {% include "@bolt/headline.twig" with headline only %}
+          {% endif %}
+
+          {{ content }}
         {% endcell %}
-      {% endif %}
-    {% endgrid %}
+      {% endgrid %}
+    {% endcell %}
 
-  {% endblock band_content %}
-{% endembed %}
+    {# TODO: only allow max of 2 buttons #}
+    {% if buttons %}
+      {% cell "u-bolt-width-1/1@only-small" %}
+        {{ include('@bolt/button-group.twig', { buttons: buttons }, with_context = false) }}
+      {% endcell %}
+    {% endif %}
+  {% endgrid %}
 
-
-
+{% endblock band_content %}
