feat: Update navbar to use 'none' instead of 'false' for theme (BDS-291)

--- a/apps/pattern-lab/src/_patterns/02-components/navbar/30-navbar-transparent.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/navbar/30-navbar-transparent.twig
@@ -4,8 +4,7 @@
 } only %}
 
 {% include "@bolt-components-navbar/navbar.twig" with {
-  "theme": "false",
-  "gradient": "false",
+  "theme": "none",
   "title": {
     "tag": "h2",
     "text": "Title Text",
