fix: Remove mistaken 'theme' from unordered list schema (BDS-291)
It actually does nothing in that context and should never have been put
in the schema.

--- a/apps/pattern-lab/src/_patterns/02-components/unordered-list/10-unordered-list-theme-variation.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/unordered-list/10-unordered-list-theme-variation.twig
@@ -1,11 +1,8 @@
-{% set schema = bolt.data.components['@bolt-components-unordered-list'].schema %}
-
-{% for theme in schema.properties.theme.enum %}
+{% for theme in ["xlight", "light", "dark", "xdark"] %}
   <p>Theme: {{ theme }}</p>
   {% embed "@utils/theme-demo.twig" %}
     {% block demo_content %}
       {% include "@bolt-components-unordered-list/unordered-list.twig" with {
-        "theme": theme,
         "contentItems" : [
           {
             "text": "Do not include any data or information in your posts that are confidential!"
@@ -25,4 +22,3 @@
   {% endembed %}
   <br>
 {% endfor %}
-
