--- a/apps/pattern-lab/src/_patterns/02-components/action-blocks/20-action-blocks-theme-variation.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/action-blocks/20-action-blocks-theme-variation.twig
@@ -1,6 +1,4 @@
-{% set schema = bolt.data.components['@bolt-components-action-blocks'].schema %}
-
-{% for theme in schema.properties.theme.enum %}
+{% for theme in ["xlight", "light", "dark", "xdark"] %}
   <p>Theme: {{ theme }}</p>
   {% embed "@utils/theme-demo.twig" %}
     {% block demo_content %}
