--- a/packages/components/bolt-action-blocks/src/action-blocks.twig
+++ b/packages/components/bolt-action-blocks/src/action-blocks.twig
@@ -60,14 +60,14 @@
 {% set itemClass = prefix ~ componentItemName %}
 {% set maxItemsPerRow = maxItemsPerRow >= minItems and maxItemsPerRow <= maxItems ? maxItemsPerRow : defaultItems %}
 {% set align = align | default("top") %}
-{% set border = border == false and border is not null ? "false" : "true" %}
+{% set border = border is sameas(false) ? false : true %}
 
 
 {% set classes = [
   baseClass,
   maxItemsPerRow ? baseClass ~ "--item-max-" ~ maxItemsPerRow : "",
   align in alignments|keys ? baseClass ~ "--vertical-align-" ~ alignments[align],
-  border == "true" ? baseClass ~ "--bordered" : baseClass ~ "--borderless"
+  border ? baseClass ~ "--bordered" : baseClass ~ "--borderless"
 ] %}
 
 
