fix: remove invalid size from icon demo band (BDS-291)

--- a/apps/pattern-lab/src/_patterns/02-components/icon/15-icon-theme-background-shape-variations.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/icon/15-icon-theme-background-shape-variations.twig
@@ -5,8 +5,7 @@
   size: "small"
 } only %}
 {% embed '@bolt-components-band/band.twig' with {
-  theme: theme,
-  size: 'xlarge'
+  theme: theme
 } only %}
   {% block band_content %}
     {% set exampleBackgrounds = ["circle", "square"] %}
@@ -45,8 +44,7 @@ text: "Theme: " ~ theme,
 size: "small"
 } only %}
 {% embed '@bolt-components-band/band.twig' with {
-theme: theme,
-size: 'xlarge'
+theme: theme
 } only %}
   {% block band_content %}
     {% set exampleBackgrounds = ["circle", "square"] %}
