refactor: update Bolt docs site to use new <bolt-code-snippet> component; remove temporary highlight.js solution originally added

--- a/apps/pattern-lab/src/_includes/utils/docs.twig
+++ b/apps/pattern-lab/src/_includes/utils/docs.twig
@@ -46,7 +46,13 @@
           id: "usage"
         }
       } %}
-      <pre class="u-bolt-margin-bottom-large"><code>{{ code }}</code></pre>
+      <bolt-code-snippet display="block" lang="twig">
+        <pre>
+          <code is="shadow-root">
+          {{ code }}
+          </code>
+        </pre>
+      </bolt-code-snippet>
     {% endif %}
 
 
