--- a/apps/pattern-lab/src/_includes/utils/docs.twig
+++ b/apps/pattern-lab/src/_includes/utils/docs.twig
@@ -2,29 +2,12 @@
 <div class="c-bolt-docs t-bolt-xlight">
 
   <div class="c-bolt-docs__page-content">
-
-    {% include "@bolt/headline.twig" with {
-      size: "xxxlarge",
-      tag: "h1",
-      text: schema.title ? schema.title : "Component Title"
-    } %}
+    <bolt-text font-size="xxxlarge" tag="h1" display="block" headline>
+    {{ schema.title ? schema.title : "Component Title" }}
+    </bolt-text>
 
     {% if readmeFile %}
       <div class="c-bolt-docs__readme">
-        {% include "@bolt/headline.twig" with {
-          size: "xlarge",
-          tag: "h2",
-          url: "#getting-started",
-          text: "Getting Started",
-          icon: "none",
-          attributes: {
-            class: [
-              "u-bolt-margin-bottom-xsmall",
-              "c-bolt-docs__heading-fragment"
-            ],
-            id: "getting-started"
-          }
-        } %}
         <div class="c-bolt-docs__lead u-bolt-margin-bottom-large">
           {{ source(readmeFile) | markdown }}
         </div>
@@ -32,30 +15,24 @@
     {% endif %}
 
     {% if code %}
-      {% include "@bolt/headline.twig" with {
-        size: "xlarge",
-        tag: "h2",
-        url: "#usage",
-        text: "Usage",
-        icon: "none",
-        attributes: {
-          class: [
-            "u-bolt-margin-bottom-xsmall",
-            "c-bolt-docs__heading-fragment"
-          ],
-          id: "usage"
-        }
-      } %}
+      <bolt-text font-size="xlarge" tag="h2" id="usage" url="#usage" headline>
+        Usage
+      </bolt-text>
+
       {% spaceless %}
-      <bolt-code-snippet display="block" lang="twig">
+        <bolt-code-snippet display="block" lang="twig">
           <pre><code is="shadow-root">{{ code }}</code></pre>
-      </bolt-code-snippet>
+        </bolt-code-snippet>
       {% endspaceless %}
     {% endif %}
 
 
     {% if schema and schema.properties %}
-      {% include "@bolt/headline.twig" with {
+      <bolt-text font-size="xlarge" tag="h2" id="schema" url="#schema" headline>
+        Schema
+      </bolt-text>
+
+      {# {% include "@bolt/headline.twig" with {
         size: "xlarge",
         tag: "h2",
         url: "#schema",
@@ -68,7 +45,7 @@
           ],
           id: "schema"
         }
-      } %}
+      } %} #}
 
       <div class="bolt-docs__schema u-bolt-margin-bottom-large">
         {% include '@utils/schema-docs.twig' with { schema: schema } only %}
@@ -76,20 +53,9 @@
     {% endif %}
 
     {% if links %}
-      {% include "@bolt/headline.twig" with {
-        size: "xlarge",
-        tag: "h2",
-        url: "#helpful-links",
-        text: "Helpful Links",
-        icon: "none",
-        attributes: {
-          class: [
-            "u-bolt-margin-bottom-xsmall",
-            "c-bolt-docs__heading-fragment"
-          ],
-          id: "schema"
-        }
-      } %}
+      <bolt-text font-size="xlarge" tag="h2" id="helpful-links" url="#helpful-links" headline>
+        Helpful Links
+      </bolt-text>
 
       <ul class="c-bolt-docs__page-nav-list u-bolt-margin-bottom-large">
         {% for link in links %}
@@ -124,115 +90,35 @@
         <ul class="o-bolt-ui-list o-bolt-ui-list--xxsmall o-bolt-ui-list--borderless">
           {% if readmeFile %}
             <li class="o-bolt-ui-list__item">
-              {% include "@bolt/headline.twig" with {
-                size: "xsmall",
-                transform: "capitalize",
-                weight: "regular",
-                tag: "h3",
-                text: include("@bolt/link.twig", {
-                  text: "Getting Started",
-                  url:  "#getting-started",
-                  attributes: {
-                    class: [
-                      "c-bolt-link--headline"
-                    ],
-                    'data-scroll-offset': 70
-                  }
-                }),
-                attributes: {
-                  class: [
-                    "c-bolt-headline--link",
-                    "u-bolt-margin-bottom-none"
-                  ]
-                },
-                icon: "none",
-              } only %}
+              <bolt-text font-size="xsmall" weight="regular" transform="capitalize" tag="h3" url="#getting-started" headline data-scroll-offset="70">
+                Getting Started
+              </bolt-text>
             </li>
           {% endif %}
 
           {% if code %}
             <li class="o-bolt-ui-list__item">
-              {% include "@bolt/headline.twig" with {
-                size: "xsmall",
-                transform: "capitalize",
-                weight: "regular",
-                tag: "h3",
-                text: include("@bolt/link.twig", {
-                  text: "Usage",
-                  url:  "#usage",
-                  attributes: {
-                    class: [
-                      "c-bolt-link--headline"
-                    ],
-                    'data-scroll-offset': 70
-                  }
-                }),
-                attributes: {
-                  class: [
-                    "c-bolt-headline--link",
-                    "u-bolt-margin-bottom-none"
-                  ]
-                },
-                icon: "none",
-              } only %}
+              <bolt-text font-size="xsmall" weight="regular" transform="capitalize" tag="h3" url="#getting-started" headline data-scroll-offset="70">
+                Usage
+              </bolt-text>
             </li>
           {% endif %}
 
 
           {% if schema and schema.properties %}
             <li class="o-bolt-ui-list__item">
-              {% include "@bolt/headline.twig" with {
-                size: "xsmall",
-                transform: "capitalize",
-                weight: "regular",
-                tag: "h3",
-                text: include("@bolt/link.twig", {
-                  text: "Schema",
-                  url:  "#schema",
-                  attributes: {
-                    class: [
-                      "c-bolt-link--headline"
-                    ],
-                    'data-scroll-offset': 70
-                  }
-                }),
-                attributes: {
-                  class: [
-                    "c-bolt-headline--link",
-                    "u-bolt-margin-bottom-none"
-                  ]
-                },
-                icon: "none",
-              } only %}
+              <bolt-text font-size="xsmall" weight="regular" transform="capitalize" tag="h3" url="#schema" headline data-scroll-offset="70">
+                Schema
+              </bolt-text>
             </li>
           {% endif %}
 
 
           {% if links %}
             <li class="o-bolt-ui-list__item">
-              {% include "@bolt/headline.twig" with {
-                size: "xsmall",
-                transform: "capitalize",
-                weight: "regular",
-                tag: "h3",
-                text: include("@bolt/link.twig", {
-                  text: "Helpful Links",
-                  url:  "#helpful-links",
-                  attributes: {
-                    class: [
-                      "c-bolt-link--headline"
-                    ],
-                    'data-scroll-offset': 70
-                  }
-                }),
-                attributes: {
-                  class: [
-                    "c-bolt-headline--link",
-                    "u-bolt-margin-bottom-none"
-                  ]
-                },
-                icon: "none",
-              } only %}
+              <bolt-text font-size="xsmall" weight="regular" transform="capitalize" tag="h3" url="#helpful-links" headline data-scroll-offset="70">
+                Helpful Links
+              </bolt-text>
             </li>
           {% endif %}
         </ul>
@@ -240,10 +126,12 @@
 
       {% if readmeFile %}
         <li class="o-bolt-ui-list__item">
-          <a href="{{ github_url(readmeFile) }}" class="c-bolt-docs__page-nav__link" target="_blank">
-            <bolt-icon name="pencil"></bolt-icon>
-            Edit this page
-          </a>
+          <bolt-text font-size="xsmall" weight="regular" transform="capitalize" tag="h3" headline>
+            <a href="{{ github_url(readmeFile) }}" target="_blank">
+              <bolt-icon name="pencil"></bolt-icon>
+              Edit this page
+            </a>
+          </bolt-text>
         </li>
       {% endif %}
     </ul>
