--- a/packages/components/bolt-headline/src/_typography.twig
+++ b/packages/components/bolt-headline/src/_typography.twig
@@ -88,7 +88,7 @@
     {% set linkVars = {
       text: text,
       url: url,
-      isHeadline: (type == "text")
+      isHeadline: (type != "text")
     } %}
 
     {% if icon %}
